## Process this file with automake to produce Makefile.in
## Created by Anjuta



## The main script
bin_SCRIPTS = gstranslator2_service.py

## Directory where .class files will be installed
gstranslator2_servicedir = $(pythondir)/gstranslator2_service


gstranslator2_service_PYTHON = \
	gstranslator2_service.py



# Remove ui directory on uninstall
uninstall-local:

	-rm -r $(pkgdatadir)
